--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,12 @@
   <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="../static/index.js"></script>
-    <title></title>
+    <title>The Art of Websockets</title>
   </head>
   
   <body>
+    <div class="slide" id="slide">
+    </div>
   </body>
 
 </html>
