cant get it to use transition

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="../static/index.js"></script>
     <title>The Art of Websockets</title>
   </head>
   
   <body>
-    <div class="slide" id="slide">
+    <center>
+    <div class="slides" id="slides">
+      <img src="../static/websocketpics/slide1.png" id="slide" width="455", height="256"></img>
     </div>
+    </center>
   </body>
-
+  <script src="../static/index.js"></script>
 </html>
