Renamed it to the right name

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <title>The Art of Websockets</title>
+    <title>The Art of WebSocket</title>
   </head>
   
   <body>
