--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,12 @@
   <body>
     <center>
     <div class="slides" id="slides">
-      <img src="../static/websocketpics/slide1.png" id="slide" width="1000", height="700"></img>
+      <img src="../static/websocketpics/slide1.png" id="slide" width="800", height="600"></img>
     </div>
+    <br>
+    <iframe width="800" height="600" 
+	    src="https://www.youtube.com/embed/RjubDNuA9wA">
+    </iframe>
     </center>
   </body>
   <script src="../static/index.js"></script>
