made background black

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>The Art of WebSocket</title>
   </head>
   
-  <body>
+  <body bgcolor="#000000">
     <center>
     <div class="slides" id="slides">
       <img src="../static/websocketpics/slide1.png" id="slide" width="800", height="600"></img>
