--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <body>
     <center>
     <div class="slides" id="slides">
-      <img src="../static/websocketpics/slide1.png" id="slide" width="455", height="256"></img>
+      <image src="../static/websocketpics/slide1.png" id="slide" width="455", height="256"></image>
     </div>
     </center>
   </body>
